# src/ValidationRules/UserValidationRules.php
@@ -9,9 +9,6 @@ class UserValidationRules extends JsonResource
     public const RULES = [
 'phone' => 'required|string',
 
-'username' => 'required|string',
-
-'password' => 'required|string',
 
 'role' => 'required|string',
 
